Updates for PIN support, plus some tweaks on the installation and iovation support.

--- a/bv_pixel.html
+++ b/bv_pixel.html
@@ -189,7 +189,9 @@ $(function(){
                         </div>
 
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="pin.html"><span>Post Interaction Notifications (Beta)</span></a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="location.html"><span>Location (Beta)</span></a>
                     </li>
@@ -257,7 +259,7 @@ $(function(){
 <br>
 <p>After you implement the BV Pixel in your iOS app, you can use this measurement dashboard to generate reports that show how users are interacting in your Android app, and to understand the value of your implementation. You can also enable other useful features. The maintenance-free post-interaction email (PIE) feature is key to increasing the volume of your consumer-generated content. In addition, you can run A/B tests to evaluate best practices in your iOS app, live, before you implement them for all customers. You must install the BV Pixel before you can use these indispensable features.</p>
 
-<p><span class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>Important: Before you start implementing this Mobile SDK module, verify your installation by checking the steps on the <a href="./installation.html">Installation and Configuration</a> page.</span></p>
+<p><span class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>  Important: Before you start implementing this Mobile SDK module, verify your installation by checking the steps on the <a href="./installation.html">Installation and Configuration</a> page.  </span></p>
 
 
 
