--- a/content_submission.html
+++ b/content_submission.html
@@ -189,7 +189,9 @@ $(function(){
                         </div>
 
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="pin.html"><span>Post Interaction Notifications (Beta)</span></a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="location.html"><span>Location (Beta)</span></a>
                     </li>
@@ -258,7 +260,7 @@ The completed project for this code walkthrough for Swift and Objective-C is in 
 <hr>
 
 
-<p><span class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>Important: Before you start implementing this Mobile SDK module, verify your installation by checking the steps on the <a href="./installation.html">Installation and Configuration</a> page.</span></p>
+<p><span class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>  Important: Before you start implementing this Mobile SDK module, verify your installation by checking the steps on the <a href="./installation.html">Installation and Configuration</a> page.  </span></p>
 
 <br>
 <h3>Content Submission Types</h3>
@@ -506,7 +508,7 @@ answer.agreedToTermsAndConditions = [NSNumber numberWithBool:YES];
     <!-- swift -->
     <div role="tabpanel" class="tab-pane active" id="swift">
 <pre><code class="swift">let feedback = BVFeedbackSubmission(contentId: contentId,
-                                            withConentType: BVFeedbackContentType.Review,
+                                            withContentType: BVFeedbackContentType.Review,
                                             withFeedbackType: BVFeedbackType.Helpfulness)
         
 feedback.userId = userId
