--- a/curations_custom_posts.html
+++ b/curations_custom_posts.html
@@ -189,7 +189,9 @@ $(function(){
                         </div>
 
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="pin.html"><span>Post Interaction Notifications (Beta)</span></a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="location.html"><span>Location (Beta)</span></a>
                     </li>
@@ -261,7 +263,7 @@ $(function(){
 </ul>
 <br>
 
-<p><span class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>Important: Before you start implementing this Mobile SDK module, verify your installation by checking the steps on the <a href="./installation.html">Installation and Configuration</a> page.</span></p>
+<p><span class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>  Important: Before you start implementing this Mobile SDK module, verify your installation by checking the steps on the <a href="./installation.html">Installation and Configuration</a> page.  </span></p>
 
 
 <h3>Example Custom Post</h3>
