--- a/index.html
+++ b/index.html
@@ -189,7 +189,9 @@ $(function(){
                         </div>
 
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="pin.html"><span>Post Interaction Notifications (Beta)</span></a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="location.html"><span>Location (Beta)</span></a>
                     </li>
@@ -303,6 +305,15 @@ $(function(){
     <a class="index-banner" href="location.html">
       <h5 class="h5link">Location<i class="fa fa-chevron-right"></i></h5>
       <p class="gray">Mobile location events subscription</p>
+    </a>
+  </div>
+</div>
+
+<div class="flex flex-row">
+  <div class="flex cel-fl-3">
+    <a class="index-banner" href="pin.html">
+      <h5 class="h5link">Post Interaction Notifications<i class="fa fa-chevron-right"></i></h5>
+      <p class="gray">Product review notifications based on purchase history</p>
     </a>
   </div>
 </div>
