--- a/pin.html
+++ b/pin.html
@@ -19,7 +19,7 @@ $(function(){
 
 	// select the tab in the sidebar to reflect current page position
 
-	var tabName = "Advertising";
+	var tabName = "Post Interaction Notifications";
 
 	$('.nav-link.active').removeClass('active');
 	console.log('active tab: ', tabName);
@@ -67,7 +67,7 @@ $(function(){
 
     ga('create', 'UA-56370630-4', 'auto');
     ga('set', {
-      title: 'Advertising'
+      title: 'Post Interaction Notifications'
     });
     ga('send', 'pageview');
   </script>
@@ -246,102 +246,62 @@ $(function(){
               <div class="page-container">
 
                 <div class="flex flex-row" id="content_title">
-	Targeted Advertising
+    Post Interaction Notifications (PIN)
 </div>
 
-<p>The Advertising module of the Bazaarvoice Mobile SDKs is powered by Bazaarvoice's powerful shopper segment data and delivers highly targeted ads to your users. You must have Shopper Advertising enabled to use the Advertising module.</p>
-<p>Bazaarvoice creates custom ad markup using <a href="https://developers.google.com/doubleclick-publishers/docs/rel_notes">DoubleClick for Publishers (DFP)</a> based on your specifications. You can use the Bazaarvoice Mobile SDKs to easily pair the DFP SDK with the Advertising module. Contact Bazaarvoice to set up targeted ads in DFP.</p>
-
-<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Important: You will need your <code>apiKeyShopperAdvertising</code> and DFP <code>adUnitId</code>s to implement and use the Advertising module.</p>
-
-<hr>
+You can increase review rates of your products by implementing PIN. The Bazaarvoice Mobile SDK can provide a queue of products that a user has purchased, but has not provided a review for. Additionally you can enqueue a timed push notification requesting the user to leave a review on the product.
+<br>
+<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  This feature is limited BETA! You must have Bazaarvoice PIN enabled to use PIN. Contact Bazaarvoice to set up PIN and to get your <strong>apiKeyPIN</strong>.</p>
 <br>
 
 <p><span class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>  Important: Before you start implementing this Mobile SDK module, verify your installation by checking the steps on the <a href="./installation.html">Installation and Configuration</a> page.  </span></p>
 
 
-
-<h3>Set User Information</h3>
-<p>
-	After a user is authenticated inside your user login workflow, set user information inside the <code>BVSDKManager#sharedManager()</code> object.
-</p>
-
-<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Note: You must give the userAuthString created with your existing Bazaarvoice implementation logic to the <strong>BVSDKManager</strong> object. However, the steps to encrypt your userAuthString are applicable even if you are not a Conversations client.</p>
-
-<h5>Example Authentication String for Testing</h5>
-<p>
-	If you haven't yet set up an authorization token, use the <a href="./user_authentication_token.html">User Authentication Token</a> example.
-</p>
-
-
 <br>
-<h3>Implementing Ads</h3>
-<p>Bazaarvoice recommends you implement advertisements using <a href="https://developers.google.com/mobile-ads-sdk/docs/dfp/ios/quick-start">DFP's SDK for iOS</a>. Contact Bazaarvoice for assistance. After ads are implemented, use the following instructions to add targeting data.</p>
-<p>For every <code>DFPRequest</code> you use, set the <code>customTargeting</code> property with the following code:</p>
 
+<h3>Getting PIN Information</h3>
+After contacting Bazaarvoice to obtain your <code>apiKeyPIN</code> and being configured for PIN you can obtain purchase history for items that have no yet been reviewed. It is important to note that you will need to be sending <a href="bv_pixel.html">BVPixel</a> events for conversions in order for products to appear in the PIN API response.
+<br/><br/>
+The use of round-trip data from a BVPixel conversion to a PIN item does require use of the Advertising Identifier (IDFA) for profile matching. If the user's device has enabled <b>Limit Ad Tracking</b> in the iOS settings, the <code>BVPINRequest</code> may be empty.
+
+<br><br>
 
 <ul class="nav nav-tabs" role="tablist">
   <li role="presentation" class="active"><a href="#swift" aria-controls="swift" role="tab" data-toggle="tab">Swift</a></li>
   <li role="presentation"><a href="#objc" aria-controls="objc" role="tab" data-toggle="tab">Objective-C</a></li>
 </ul>
 
-
-<!-- Tab panes -->
 <div class="tab-content code-switcher">
-	<!-- swift -->
-	<div role="tabpanel" class="tab-pane active" id="swift">	
-		
-<pre><code class="swift">let request = DFPRequest()
-request.customTargeting = BVSDKManager.shared().getCustomTargeting()
-...</code></pre>
-	</div>
-	<!-- objective-c -->
-	<div role="tabpanel" class="tab-pane" id="objc">
-<pre><code class="objectivec">DFPRequest *request = [DFPRequest request];
-request.customTargeting = [[BVSDKManager sharedManager] getCustomTargeting];
-...</code></pre>
-	</div>
-
-</div>
-<p style="padding-top:6px;">The above code sends DFP the information necessary to target ads correctly.</p>
-<br>
-<br>
-
-<a name="Upgrading" style="color:#444; text-decoration: none;"><h3>Upgrading from Older Versions of Bazaarvoice Mobile SDKs</h3></a>
-<p>In previous versions, the Mobile SDKs included the DFP SDK, and you needed to use subclasses like <code>BVTargetedRequest</code> instead of <code>DFPRequest</code>. However, Bazaarvoice has simplified this process greatly with the latest Mobile SDKs. If you want to use the Advertising module of the most up-to-date Mobile SDKs, you must implement DFP ads yourself. Google provides <a href="https://developers.google.com/mobile-ads-sdk/docs/dfp/ios/quick-start">excellent documentation</a> to guide you through the process. After ads are implemented and working well, use the code in the "Implementing Ads" section to add targeting information.</p>
-<p>Complete the following steps to finish upgrading your Mobile SDK:</p>
-<ul>
-	<li>Change <code>BVTargetedAdLoader</code> to <code>GADAdLoader</code></li>
-	<li>Change <code>BVTargetedRequest</code> to <code>DFPRequest</code></li>
-	<li>Change <code>BVTargetedInterstitial</code> to <code>DFPInterstitial</code></li>
-	<li>Change <code>BVTargetedBannerView</code> to <code>DFPBannerView</code></li>
-</ul>
-<br>
+    <!-- swift -->
+    <div role="tabpanel" class="tab-pane active" id="swift">
+<pre><code class="swift">
+BVPINRequest.getPendingPINs({(pins) in
+    //Product information for purchases that have not been reviewed in the BVPIN objects.
+}, failure: {(error) in
+    // Ooops, something went wrong, check the error.
+})
+</code></pre>
+    </div>
+    <!-- objective-c -->
+    <div role="tabpanel" class="tab-pane" id="objc">
+        <p><pre><code class="objectivec">[BVPINRequest getPendingPINs:^(NSArray&ltBVPIN *&gt * _Nonnull pins) {
+    //Product information for purchases that have not been reviewed in the BVPIN objects.
+}failure:^(NSError * _Nonnull error) {
+    // Ooops, something went wrong, check the error.
+}];
+</code></pre>
+        </div></div>
 <br>
 
-<h3>Determining Contextual Interests</h3>
-<p>The Advertising module is structured around categories. You can find a complete list in <code>BVContextualInterests.h</code>. The list is split into two tiers, with about 30 Tier One categories, each of which includes multiple Tier Two subcategories.</p>
-<p>For example, the Women's dresses section of a department store would correspond to the following product categories:</p>
-<ul>
-	<li>Tier One: <code>tierOneApparelAndAccessories</code></li>
-	<li>Tier Two: <code>tierTwoApparelAndAccessoriesWomensDresses</code></li>
-</ul>
-<p>Similarly, the Television section of an electronics store would correspond to the following product categories:</p>
-<ul>
-	<li>Tier One: <code>tierOneConsumerElectronics</code></li>
-	<li>Tier Two: <code>tierTwoConsumerElectronicsTelevisions</code></li>
-</ul>
-<p>All Tier Two categories are extensions of their Tier One category names.<p></p>Contextual interest categories are used while sending location information to the Advertising module, as defined in the following section.</p>
-<br>
-<br>
+<h3>Push Notifications</h3>
 
-<h3>Notes on Advertising and User Location</h3>
-<p>The Advertising module provides many ways to integrate location data into a shopper's profile. AYou can find all location-related methods in <code>BVLocationEventsHelper.h</code>. Bear in mind the following information:</p>
-<ul>
-	<li>All location methods have <code>contextualTier1</code> and <code>contextualTier2</code> parameters. This allows you to send all location->interest mapping information available to the Advertising module to give the shopper the best profile possible. Refer to <code>BVContextualInterests.h</code> for a generated list of Contextual Tier 1 and Tier 2 strings.</li>
-	<li>Bazaarvoice defines methods that correlate strongly to <code>CLLocationManagerDelegate</code> methods. You can find example usage of CLLocationManager+BVAdvertising inside the <code>LocationExample.m</code> file.</li>
-	<li>Bazaarvoice also defines methods that correlate strongly to Gimbal Beacon delegate methods, specifically <code>GMBLPlaceManagerDelegate</code> and <code>GMBLBeaconManagerDelegate</code>. You can find example usage of Gimbal+BVAdvertising in the <code>GimbalExample.m</code> file.</li>
-</ul>
+You can also queue up local push notifications to ask customers to leave reviews on specific products they have purchased. The action item text and image are fully customizable as well as the notification delay time. 
+<br><br>
+<img src="ios-img/PIN/pin_push_notification.png" style="height:410px; box-shadow: 0px 0px 8px #444;" class="center-block img-fluid" />
+
+<br><br><br>
+Ask your Bazaarvoice sales representative for a demonstration and how we can help increase your review rates on products.
+<br>
 <br>
 
 
