Curations Display and Submission UI

--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@ $(function(){
                             <span>Installation and Configuration</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="example_projects.html">
+                            <span><i class="m-r-1 fa fa-file-code-o"></i>Example Projects</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
             <li class="nav-item">
@@ -248,7 +253,8 @@ $(function(){
                 <div class="flex flex-row" id="content_title">
   Bazaarvoice Mobile SDK for iOS
 </div>
-<p>Welcome to Bazaarvoice. Use the guides and references on this site to install, integrate, and effectively use the Bazaarvoice Mobile SDK for iOS with Bazaarvoice products such as Conversations, Curations, and Shopper Advertising.</p>
+<p>Welcome to the Bazaarvoice Mobile SDK (BVSDK). Use the guides and references on this site to install, integrate, and effectively use the Bazaarvoice Mobile SDK for iOS with Bazaarvoice products such as Conversations, Curations, and Shopper Advertising.</p>
+If you are new to the SDK and want to get an idea of the services and offings the BVSDK, <b>check out the <a href="#bvsdkdemo">Live Demo</a> below</b> and run our iOS Demo app right here in your browser!
 <hr>
 <br>
 
@@ -320,6 +326,7 @@ $(function(){
 
 <hr>
 
+<a name="bvsdkdemo"></a>
 <h3>Try out the Bazaarvoice Mobile SDK Demo!</h3>
 
 
