--- a/example_projects.html
+++ b/example_projects.html
@@ -109,6 +109,11 @@ $(function(){
                             <span>Installation and Configuration</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="example_projects.html">
+                            <span><i class="m-r-1 fa fa-file-code-o"></i>Example Projects</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
             <li class="nav-item">
@@ -245,22 +250,30 @@ $(function(){
             <div class="scroll-container scrollable--scrollbar">
               <div class="page-container">
 
-                The BVSDK contains very basic minimal configuration examples (Basic Example Projects) for each SDK module as well as a full demo project highlighting a full integration of all the BVSDK components. Preview any of the samples in the SDK to help you get your implementation up and running quickly.
+                The Bazaarvoice SDK for iOS comes with Example projects in both Swift and Objective-C for each component in the SDK. The Examples are written in such a way that you can easily drop in your own Client ID and API Key and quickly get familiar with the APIs and data. There is also a full kitchen-sink style BVSDKDemo app that contains all the products in a mock eCommerce mobile app. The BVSDKDemo app runs out-of-the-box with mock data so you can run it to get an idea of how Bazaarvoice solutions might fit into your mobile solution.
+<br><br>
+Project Descriptions:
+<br><br>
+<ul>
+	<li><a href="#basicexamples">Basic Example Projects</a></li>
+	<li><a href="#bvsdkdemo">BVSDKDemo (Kitchen Sink)</a></li>
+</ul>
 
 <p>
 <p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  NOTE: The Swift and BVSDKDemo examples require XCode 8.0+ or greater. All Swift examples are written and tested against the Swift 3.0 compiler.</p>
 
+<a name="basicexamples"></a>
 <div class="flex flex-row" id="content_title">
 	Basic Example Projects
 </div>
 <hr>
 <p>Product Recommendations, Advertising, Curations, and Conversations all come with example projects, which demonstrate how to properly implement these modules. Each of the BVSDK modules below are located under the <a href="https://github.com/bazaarvoice/bv-ios-sdk/tree/master/Examples">/Examples</a> directory and have both Swift and Objective-C reference implementations:</p>
 <ul>
+	<li><strong>Conversations</strong>: Demonstrates a minimal configuration for constructing a Conversations API request for display or content submission.
+	</li>
+	<li><strong>Curations</strong>: Shows how to display a social feed and sumbit photos.</li>
 	<li><strong>Product Recommendations</strong>: Shows how you can fetch and display product recommendations for a user.</li>
 	<li><strong>Advertising</strong>: Shows how you can utlize Bazaarvoice's shopper segment data to provide targeting advertising to your customers.</li>
-	<li><strong>Curations</strong>: Shows hows to fetch and display social feeds using the Curations REST API.</li>
-	<li><strong>Product Recommendations</strong>: Demonstrates a minimal configuration for constructing a Conversations API request.
-	</li>
 </ul>
 <br>
 
@@ -278,6 +291,7 @@ $(function(){
 	<li>Run it!</li>
 </ol>
 
+<a name="bvsdkdemo"></a>
 <div class="flex flex-row" id="content_title">
 	BVSDKDemo: Full SDK Integration Examples
 </div>
