--- a/installation.html
+++ b/installation.html
@@ -109,6 +109,11 @@ $(function(){
                             <span>Installation and Configuration</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="example_projects.html">
+                            <span><i class="m-r-1 fa fa-file-code-o"></i>Example Projects</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
             <li class="nav-item">
@@ -285,7 +290,9 @@ We support installation of the Bazaarvoice SDK for iOS with CocoaPods, Carthage,
         <br><br>
         2. Add the pods for which you have an API key into your <code>Podfile</code>:
         <br><br>
-        <pre><code>pod 'BVSDK/BVCurations'
+        <pre><code># each pod is a subpsec so you only need to add the lines for the component you are installing.
+pod 'BVSDK/BVCurations'
+pod 'BVSDK/BVCurationsUI'
 pod 'BVSDK/BVConversations'
 pod 'BVSDK/BVAdvertising'
 pod 'BVSDK/BVRecommendations'
