Add support for conversations comments display

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ $(function(){
                      <li class="nav-item">
                         <a class="nav-link" role="button" data-toggle="collapse" href="#conversationsStoresDropdown"
                            aria-expanded="false" aria-controls="conversationsStoresDropdown">
-                                <span><span>Ratings and Reviews Stores</span><span style="float:right;"><i
+                                <span><span>Ratings and Reviews for Stores</span><span style="float:right;"><i
                                         id="conversationsStoresDropdownArrow"
                                         class="fa fa-sort-desc fa-rotate-270"></i></span></span>
                         </a>
