MOB-644 add video to review submission

--- a/content_submission.html
+++ b/content_submission.html
@@ -330,7 +330,10 @@ review.sendEmailAlertWhenPublished = true
 review.agreedToTermsAndConditions  = true
 
 // user added a photo to this review
-review.addPhoto(userPhoto, withPhotoCaption: userPhotoCaption)</code></pre>
+review.addPhoto(userPhoto, withPhotoCaption: userPhotoCaption)
+
+// add youtube video link, if your configuration supports it
+reviewSubmission.addVideoURL(userYouTubeUrl, withCaption: userVideoCaption)</code></pre>
 	</div>
 	<!-- objective-c -->
 	<div role="tabpanel" class="tab-pane" id="objc">
@@ -345,7 +348,10 @@ review.sendEmailAlertWhenPublished = [NSNumber numberWithBool:YES];
 review.agreedToTermsAndConditions  = [NSNumber numberWithBool:YES];
 
 // user added a photo to this review
-[review addPhoto:userPhoto withPhotoCaption:userPhotoCaption];</code></pre>
+[review addPhoto: userPhoto withPhotoCaption: userPhotoCaption];
+
+// add youtube video link, if your configuration supports it
+[review addVideoURL: userYouTubeUrl withCaption: userVideoCaption];</code></pre>
 	</div>
 </div>
 <br>
