--- a/content_submission.html
+++ b/content_submission.html
@@ -333,7 +333,7 @@ review.agreedToTermsAndConditions  = true
 review.addPhoto(userPhoto, withPhotoCaption: userPhotoCaption)
 
 // add youtube video link, if your configuration supports it
-reviewSubmission.addVideoURL(userYouTubeUrl, withCaption: userVideoCaption)</code></pre>
+review.addVideoURL(userYouTubeUrl, withCaption: userVideoCaption)</code></pre>
 	</div>
 	<!-- objective-c -->
 	<div role="tabpanel" class="tab-pane" id="objc">
