--- a/faq_support.html
+++ b/faq_support.html
@@ -275,12 +275,6 @@ function scrollAndClickById(id) {
                         <a class="nav-link" href="product_recommendations.html"><span>Product Recommendations (Beta)</span></a>
                     </li>
 
-                    <!-- Advertising -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="advertising.html"><span>Advertising</span></a>
-                    </li>
-
-
                     <!-- Ratings Reviews Stores -->
                      <li class="nav-item">
                         <a class="nav-link" role="button" data-toggle="collapse" href="#conversationsStoresDropdown"
@@ -364,8 +358,8 @@ function scrollAndClickById(id) {
 
 <a name="idfa"></a>
 <h5 class="question">Does the Bazaarvoice Mobile SDK use IDFA?</h5>
-<p class="answer">Yes, the SDK uses IDFA for both the Advertising and Product Recommendations modules. The SDK checks whether the user has "Limit Ad Tracking" enabled, and respects the option if enabled.</p>
-<p class="answer">If you use the Advertising module and/or the Product Recommendations module, you must submit applications via iTunes Connect, letting Apple know that the app uses IDFA for targeted advertising.</p>
+<p class="answer">Yes, the SDK uses IDFA for Product Recommendations modules. The SDK checks whether the user has "Limit Ad Tracking" enabled, and respects the option if enabled.</p>
+<p class="answer">If you use the Product Recommendations module, you must submit applications via iTunes Connect, letting Apple know that the app uses the IDFA.</p>
 
 <br>
 
