--- a/index.html
+++ b/index.html
@@ -275,12 +275,6 @@ function scrollAndClickById(id) {
                         <a class="nav-link" href="product_recommendations.html"><span>Product Recommendations (Beta)</span></a>
                     </li>
 
-                    <!-- Advertising -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="advertising.html"><span>Advertising</span></a>
-                    </li>
-
-
                     <!-- Ratings Reviews Stores -->
                      <li class="nav-item">
                         <a class="nav-link" role="button" data-toggle="collapse" href="#conversationsStoresDropdown"
@@ -346,7 +340,7 @@ function scrollAndClickById(id) {
                 <div class="flex flex-row" id="content_title">
   Bazaarvoice Mobile SDK for iOS
 </div>
-<p>The Bazaarvoice Mobile SDK (BVSDK) provides access to most of the core products Bazaarvoice offers. The SDK is built with modularity in mind with a common core and analytics package that can be installed stand-alone. From there, you can add on whichever products and services you'd like. Use the guides and references on this site to install, integrate, and effectively use the Bazaarvoice Mobile SDK for iOS with Bazaarvoice products, such as Conversations, Curations, and Shopper Advertising.</p>
+<p>The Bazaarvoice Mobile SDK (BVSDK) provides access to most of the core products Bazaarvoice offers. The SDK is built with modularity in mind with a common core and analytics package that can be installed stand-alone. From there, you can add on whichever products and services you'd like. Use the guides and references on this site to install, integrate, and effectively use the Bazaarvoice Mobile SDK for iOS with Bazaarvoice products, such as Conversations, Curations, etc.</p>
 <p>If you are new to the SDK and want to get an idea of the services and offerings the BVSDK, <b>check out the <a href="#bvsdkdemo">Live Demo</a> below</b> and run our iOS Demo app right here in your browser!</p>
 
 <p>Sections:</p>
@@ -397,16 +391,6 @@ The SDK is used by several industry-leading mobile solutions that rely on a stab
             </a>
 
     </td>
-  </tr>
-  <tr>
-    <td><div class="flex flex-row">
-  <div class="flex cel-fl-3">
-    <a class="index-banner" href="advertising.html">
-      <h5 class="h5link">Advertising <i class="fa fa-chevron-right"></i></h5>
-      <p class="gray">Targeted advertising across all platforms</p>
-    </a>
-  </div>
-</div></td>
   </tr>
    <tr>
     <td>
